fixed missed slidercontainer input alignment

--- a/front-end/src/hooks/SliderContainer.css
+++ b/front-end/src/hooks/SliderContainer.css
@@ -5,4 +5,5 @@
 
 .slidercontainer__inputs{
     display: flex;
+    justify-content: space-between;
 }
